external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_explicit_type_arg_assign.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_explicit_type_arg_assign.move:6:22
  │
6 │         Foo <u64>(_) = Foo(0);
  │                      ^
  │                      │
  │                      Unexpected '='
  │                      Expected ';'

